# ot-2022-syksy-harjoitustyo

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
src/: .env  config.py  enemy.py  eventqueue.py  events.py  game.py  gameloop.py  index.py  renderer.py  round.py  tower.py
src/sprites/: enemy.py  goal.py  road.py  tile.py  tower.py
src/static/levels/: level.py
