[tool.poetry]
name = "ot-2022-syksy"
version = "0.1.0"
description = ""
authors = ["Juho Lukka <Juholukka00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
invoke = "^1.7.3"
autopep8 = "^2.0.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
